Add benchmarks to hashmap operations inside containers
    * because 'HashMap' is now a wrapper and may/may not get unboxed
      during a program's execution, benchmarks to operations on sets of
      hashmaps inside different kinds of containers were added;

--- a/unordered-containers.cabal
+++ b/unordered-containers.cabal
@@ -215,6 +215,7 @@ benchmark benchmarks
     bytestring,
     containers,
     gauge >= 0.2.5 && < 0.3,
+    vector,
     deepseq >= 1.4,
     hashable >= 1.0.1.1,
     hashmap,
